manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: askmycv
  labels:
    app: askmycv
spec:
  replicas: 1
  progressDeadlineSeconds: 300
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0
  selector:
    matchLabels:
      app: askmycv
  template:
    metadata:
      labels:
        app: askmycv
    spec:
      containers:
      - name: askmycv
        image: simoneacr.azurecr.io/askmycv:__IMAGE_TAG__
        ports:
        - containerPort: 5005
        readinessProbe:
          httpGet:
            path: /
            port: 5005
          initialDelaySeconds: 60
          periodSeconds: 10
          failureThreshold: 6
        resources:
          requests:
            memory: "1Gi"
            cpu: "250m"
          limits:
            memory: "3Gi"
            cpu: "1000m"
      imagePullSecrets:
        - name: acr-auth
